Discourage dependencies on JDK internals